<resources>
    <string name="app_name">Tartu Tudengipäevad</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="home">Home</string>
    <string name="event">Events</string>
    <string name="personal_Schedules">My Schedules</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="playlist">Playlist</string>
    <string name="feedback">Send Feedback</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="home_menu">
        <item>Home</item>
        <item>Events</item>
        <item>Notifications</item>
        <item>Playlist</item>
        <item>Language</item>
        <!--<item>Settings</item>-->
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_sponsors">Our Sponsors</string>
    <string name="activity_title_personal_schedules"> My Schedules</string>
    <string name="activity_title_event_schedules">Event Schedules</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="sponsors">Our Sponsors</string>

    <string name="hello_blank_fragment">Blank</string>

    <string name="loading_error">Error Loading Events</string>
    <string name="events_loading">Loading!!!</string>
    <string name="no_event">No Events</string>

    <string name="action_settings">Settings</string>
    <string name="action_remove_favourite">Remove From Favourite</string>
    <string name="title_favourite">Favorites</string>
   <string name="action_settings">Settings</string>
   <string name="action_remove_favourite"> From Favourite</string>
    <string name="info">Do not miss this Event</string>
   <string name="title_favourite">Saved Events</string>

    <string name="title_event">Events</string>
    <string name="title_saved_events">Saved Events</string>
    <string name="title_map">Map</string>

    <string name="pref_title_select_language">Events language</string>
    <string-array name="pref_list_titles">
        <item>Estonian</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_language">Language</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
