<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/event_Schedules"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/event_Schedules" />
        <item
            android:id="@+id/personal_Schedules"
            android:icon="@drawable/ic_subtitles_black_24dp"
            android:title="@string/personal_Schedules" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/playlist" />

        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/map" />

        <!-- <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" /> -->
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/about_us" />
            <item
                android:id="@+id/sponsors"
                android:title="@string/sponsors" />
        </menu>
    </item>

</menu>